# ReViSQL

./: .env.example  .gitignore  README.md  pyproject.toml
data/: arcwise_plat_full.json  arcwise_plat_sql.json  bird-600-test.parquet  bird-plat-1412.csv  bird-plat-2.5k-v1.json  bird-plat-2k.json  bird-plat-588-v2.csv  bird-verified-train-1000.json  bird-verified-train-125.json  bird-verified-train-250.json  bird-verified-train-500.json  bird-verified-train.json  bird-verified-train.parquet  bird-verified-val.json  bird_eval.parquet  bird_original_val.parquet  combined_test_no_ek.parquet  correction_test.parquet  noisy-600.parquet  spider2sqlite.json  spider2sqlite_eval.parquet  spider_2_snow_eval.parquet  spider_test.parquet  stage_1.parquet  stage_2.parquet  stage_3.parquet  stage_4.parquet  train.parquet  val_test.parquet
data/ddls/: AdventureWorks_spider2.sql  Airlines_spider2.sql  Baseball_spider2.sql  BowlingLeague_spider2.sql  Brazilian_E_Commerce_spider2.sql  California_Traffic_Collision_spider2.sql  Db-IMDB_spider2.sql  EU_soccer_spider2.sql  EntertainmentAgency_spider2.sql  IPL_spider2.sql  Pagila_spider2.sql  WWE_spider2.sql  address.sql  airline.sql  app_store.sql  authors.sql  bank_sales_trading_spider2.sql  (+91 more)
data_scripts/: construct_db_schema.py  construct_spider2sqlite_db_schema.py  curate_RL_dataset.py  curate_curriculum_data.py  curate_final_data.py  generate_spider2sqlite_tables.py
reconciliation/: prompt.py  reconciliation.py  run_reconciliation.py  run_reconciliation_detailed.py
scripts/: infer.py  train.py
tinker_cookbook/: model_info.py
(+13 files in other folders)
