[project]
name = "revisql"
version = "0.1.0"
description = "ReViSQL: Reinforcement Learning for Text-to-SQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "transformers>=4.57.6,<5.0.0",
    "torch",
    "datasets>=4.0.0",
    "pandas>=2.2.3",
    "numpy",
    "scipy",
    # SQL
    "sqlglot[rs]>=28.6.0",
    "duckdb>=1.0.0",
    # LLM APIs
    "together>=1.5.34",
    "groq>=1.0.0",
    "anthropic>=0.72.0",
    "openai>=2.7.1",
    # Training framework
    "tinker>=0.9.0",
    # Utilities
    "wandb>=0.22.1",
    "rank-bm25>=0.2.2",
    "func-timeout>=4.3.5",
    "gdown>=5.2.0",
    "tiktoken>=0.12.0",
    "tqdm",
    "jupyter>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinker_cookbook"]
